// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PreviewHand /> renders empty hand 1`] = `
.emotion-01gohjae-PreviewHand {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  min-height: 15px;
}

<TransparentCard
  bodyStyle={
    Object {
      "padding": 0,
    }
  }
  cardCSS={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="emotion-0"
  />
</TransparentCard>
`;

exports[`<PreviewHand /> renders tiles 1`] = `
.emotion-01gohjae-PreviewHand {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  min-height: 15px;
}

<TransparentCard
  bodyStyle={
    Object {
      "padding": 0,
    }
  }
  cardCSS={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="emotion-0"
  >
    <Memo(PreviewTile)
      id="A1"
      key="A1"
      letter="A"
    />
    <Memo(PreviewTile)
      id="B1"
      key="B1"
      letter="B"
    />
  </div>
</TransparentCard>
`;
